[lab-4](feat) logs
