# lab-4/src/main/kotlin/org/nechaev/pomodoro/api/TimersApiDelegate.kt
@@ -1,20 +1,21 @@
 package org.nechaev.pomodoro.api
 
 import org.nechaev.pomodoro.model.CreateTimerRequest
-import org.nechaev.pomodoro.model.ErrorResponse
 import org.nechaev.pomodoro.model.Timer
 import org.springframework.http.HttpStatus
 import org.springframework.http.MediaType
 import org.springframework.http.ResponseEntity
 import org.springframework.web.context.request.NativeWebRequest
-
-import java.util.Optional
+import java.util.*
 
 /**
  * A delegate to be called by the {@link TimersApiController}}.
  * Implement this interface with a {@link org.springframework.stereotype.Service} annotated class.
  */
-@jakarta.annotation.Generated(value = ["org.openapitools.codegen.languages.KotlinSpringServerCodegen"], comments = "Generator version: 7.12.0")
+@jakarta.annotation.Generated(
+    value = ["org.openapitools.codegen.languages.KotlinSpringServerCodegen"],
+    comments = "Generator version: 7.12.0"
+)
 interface TimersApiDelegate {
 
     fun getRequest(): Optional<NativeWebRequest> = Optional.empty()
@@ -26,15 +27,27 @@ interface TimersApiDelegate {
         getRequest().ifPresent { request ->
             for (mediaType in MediaType.parseMediaTypes(request.getHeader("Accept"))) {
                 if (mediaType.isCompatibleWith(MediaType.valueOf("application/json"))) {
-                    ApiUtil.setExampleResponse(request, "application/json", "{  \"durationMinutes\" : 25,  \"name\" : \"Работа\",  \"remainingSeconds\" : 1230,  \"id\" : 1,  \"status\" : \"RUNNING\"}")
+                    ApiUtil.setExampleResponse(
+                        request,
+                        "application/json",
+                        "{  \"durationMinutes\" : 25,  \"name\" : \"Работа\",  \"remainingSeconds\" : 1230,  \"id\" : 1,  \"status\" : \"RUNNING\"}"
+                    )
                     break
                 }
                 if (mediaType.isCompatibleWith(MediaType.valueOf("application/json"))) {
-                    ApiUtil.setExampleResponse(request, "application/json", "{  \"message\" : \"Таймер с id=99 не найден\"}")
+                    ApiUtil.setExampleResponse(
+                        request,
+                        "application/json",
+                        "{  \"message\" : \"Таймер с id=99 не найден\"}"
+                    )
                     break
                 }
                 if (mediaType.isCompatibleWith(MediaType.valueOf("application/json"))) {
-                    ApiUtil.setExampleResponse(request, "application/json", "{  \"message\" : \"Таймер с id=99 не найден\"}")
+                    ApiUtil.setExampleResponse(
+                        request,
+                        "application/json",
+                        "{  \"message\" : \"Таймер с id=99 не найден\"}"
+                    )
                     break
                 }
             }
@@ -51,11 +64,19 @@ interface TimersApiDelegate {
         getRequest().ifPresent { request ->
             for (mediaType in MediaType.parseMediaTypes(request.getHeader("Accept"))) {
                 if (mediaType.isCompatibleWith(MediaType.valueOf("application/json"))) {
-                    ApiUtil.setExampleResponse(request, "application/json", "{  \"durationMinutes\" : 25,  \"name\" : \"Работа\",  \"remainingSeconds\" : 1230,  \"id\" : 1,  \"status\" : \"RUNNING\"}")
+                    ApiUtil.setExampleResponse(
+                        request,
+                        "application/json",
+                        "{  \"durationMinutes\" : 25,  \"name\" : \"Работа\",  \"remainingSeconds\" : 1230,  \"id\" : 1,  \"status\" : \"RUNNING\"}"
+                    )
                     break
                 }
                 if (mediaType.isCompatibleWith(MediaType.valueOf("application/json"))) {
-                    ApiUtil.setExampleResponse(request, "application/json", "{  \"message\" : \"Таймер с id=99 не найден\"}")
+                    ApiUtil.setExampleResponse(
+                        request,
+                        "application/json",
+                        "{  \"message\" : \"Таймер с id=99 не найден\"}"
+                    )
                     break
                 }
             }
@@ -72,7 +93,11 @@ interface TimersApiDelegate {
         getRequest().ifPresent { request ->
             for (mediaType in MediaType.parseMediaTypes(request.getHeader("Accept"))) {
                 if (mediaType.isCompatibleWith(MediaType.valueOf("application/json"))) {
-                    ApiUtil.setExampleResponse(request, "application/json", "[ {  \"durationMinutes\" : 25,  \"name\" : \"Работа\",  \"remainingSeconds\" : 1230,  \"id\" : 1,  \"status\" : \"RUNNING\"}, {  \"durationMinutes\" : 25,  \"name\" : \"Работа\",  \"remainingSeconds\" : 1230,  \"id\" : 1,  \"status\" : \"RUNNING\"} ]")
+                    ApiUtil.setExampleResponse(
+                        request,
+                        "application/json",
+                        "[ {  \"durationMinutes\" : 25,  \"name\" : \"Работа\",  \"remainingSeconds\" : 1230,  \"id\" : 1,  \"status\" : \"RUNNING\"}, {  \"durationMinutes\" : 25,  \"name\" : \"Работа\",  \"remainingSeconds\" : 1230,  \"id\" : 1,  \"status\" : \"RUNNING\"} ]"
+                    )
                     break
                 }
             }
@@ -89,11 +114,19 @@ interface TimersApiDelegate {
         getRequest().ifPresent { request ->
             for (mediaType in MediaType.parseMediaTypes(request.getHeader("Accept"))) {
                 if (mediaType.isCompatibleWith(MediaType.valueOf("application/json"))) {
-                    ApiUtil.setExampleResponse(request, "application/json", "{  \"durationMinutes\" : 25,  \"name\" : \"Работа\",  \"remainingSeconds\" : 1230,  \"id\" : 1,  \"status\" : \"RUNNING\"}")
+                    ApiUtil.setExampleResponse(
+                        request,
+                        "application/json",
+                        "{  \"durationMinutes\" : 25,  \"name\" : \"Работа\",  \"remainingSeconds\" : 1230,  \"id\" : 1,  \"status\" : \"RUNNING\"}"
+                    )
                     break
                 }
                 if (mediaType.isCompatibleWith(MediaType.valueOf("application/json"))) {
-                    ApiUtil.setExampleResponse(request, "application/json", "{  \"message\" : \"Таймер с id=99 не найден\"}")
+                    ApiUtil.setExampleResponse(
+                        request,
+                        "application/json",
+                        "{  \"message\" : \"Таймер с id=99 не найден\"}"
+                    )
                     break
                 }
             }
@@ -110,15 +143,27 @@ interface TimersApiDelegate {
         getRequest().ifPresent { request ->
             for (mediaType in MediaType.parseMediaTypes(request.getHeader("Accept"))) {
                 if (mediaType.isCompatibleWith(MediaType.valueOf("application/json"))) {
-                    ApiUtil.setExampleResponse(request, "application/json", "{  \"durationMinutes\" : 25,  \"name\" : \"Работа\",  \"remainingSeconds\" : 1230,  \"id\" : 1,  \"status\" : \"RUNNING\"}")
+                    ApiUtil.setExampleResponse(
+                        request,
+                        "application/json",
+                        "{  \"durationMinutes\" : 25,  \"name\" : \"Работа\",  \"remainingSeconds\" : 1230,  \"id\" : 1,  \"status\" : \"RUNNING\"}"
+                    )
                     break
                 }
                 if (mediaType.isCompatibleWith(MediaType.valueOf("application/json"))) {
-                    ApiUtil.setExampleResponse(request, "application/json", "{  \"message\" : \"Таймер с id=99 не найден\"}")
+                    ApiUtil.setExampleResponse(
+                        request,
+                        "application/json",
+                        "{  \"message\" : \"Таймер с id=99 не найден\"}"
+                    )
                     break
                 }
                 if (mediaType.isCompatibleWith(MediaType.valueOf("application/json"))) {
-                    ApiUtil.setExampleResponse(request, "application/json", "{  \"message\" : \"Таймер с id=99 не найден\"}")
+                    ApiUtil.setExampleResponse(
+                        request,
+                        "application/json",
+                        "{  \"message\" : \"Таймер с id=99 не найден\"}"
+                    )
                     break
                 }
             }
@@ -135,15 +180,27 @@ interface TimersApiDelegate {
         getRequest().ifPresent { request ->
             for (mediaType in MediaType.parseMediaTypes(request.getHeader("Accept"))) {
                 if (mediaType.isCompatibleWith(MediaType.valueOf("application/json"))) {
-                    ApiUtil.setExampleResponse(request, "application/json", "{  \"durationMinutes\" : 25,  \"name\" : \"Работа\",  \"remainingSeconds\" : 1230,  \"id\" : 1,  \"status\" : \"RUNNING\"}")
+                    ApiUtil.setExampleResponse(
+                        request,
+                        "application/json",
+                        "{  \"durationMinutes\" : 25,  \"name\" : \"Работа\",  \"remainingSeconds\" : 1230,  \"id\" : 1,  \"status\" : \"RUNNING\"}"
+                    )
                     break
                 }
                 if (mediaType.isCompatibleWith(MediaType.valueOf("application/json"))) {
-                    ApiUtil.setExampleResponse(request, "application/json", "{  \"message\" : \"Таймер с id=99 не найден\"}")
+                    ApiUtil.setExampleResponse(
+                        request,
+                        "application/json",
+                        "{  \"message\" : \"Таймер с id=99 не найден\"}"
+                    )
                     break
                 }
                 if (mediaType.isCompatibleWith(MediaType.valueOf("application/json"))) {
-                    ApiUtil.setExampleResponse(request, "application/json", "{  \"message\" : \"Таймер с id=99 не найден\"}")
+                    ApiUtil.setExampleResponse(
+                        request,
+                        "application/json",
+                        "{  \"message\" : \"Таймер с id=99 не найден\"}"
+                    )
                     break
                 }
             }
